clusters/talos-cluster/readarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: readarr
  labels:
    pod-security.kubernetes.io/enforce: privileged
