clusters/talos-cluster/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr-service
  namespace: readarr
spec:
  selector:
    app: readarr-deployment
  ports:
    - name: shadowsocks-tcp
      protocol: TCP
      port: 8388
    - name: shadowsocks-udp
      protocol: UDP
      port: 8388
    - name: readarr
      protocol: TCP
      port: 8787
