clusters/talos-cluster/readarr/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr-route
  namespace: readarr
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "readarr.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: readarr-service
          port: 8787
